--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <link rel="stylesheet" href="/public//font-awesome-4.7.0/css//font-awesome.min.css">
+    <link rel="stylesheet" href="/public/css/gloab.css">
 </head>
 
 <body>
