--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <link rel="stylesheet" href="/public//font-awesome-4.7.0/css//font-awesome.min.css">
-    <link rel="stylesheet" href="/public/css/gloab.css">
+    <link rel="stylesheet" href="/css/gloab.css">
+    <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
